--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div class="row">
       <div class="col-md-7">
         <img src="https://picsum.photos/id/235/600/400" alt="">
+          class="img-fluid"
       </div>
       <div class="col-md-5">
         <h1 class="mt-5">TAGLINE</h1>
@@ -161,9 +162,7 @@
       <span class="text-white">copyright &copy 2023</span>
     </div>
   </footer>
-  @media(max-width:600px)
-    {
-    #main}
+  
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </html>
