--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     <div class="container">
     <div class="row">
       <div class="col-md-7">
-        <img src="https://picsum.photos/id/235/600/400" alt=""/>
+        <img src="https://picsum.photos/id/235/600/400" alt=""
+            class="img-fluid"
+            />
          </div>
       <div class="col-md-5">
         <h1 class="mt-5">TAGLINE</h1>
